--- a/app/views/bank_statements/point.html.haml
+++ b/app/views/bank_statements/point.html.haml
@@ -7,7 +7,7 @@
 
 %h2=tc(:entries_to_point)
 =form_tag do
-  %table.kame
+  %table.list
     %tr
       %th
       %th=JournalEntry.human_attribute_name("number")
