--- a/app/views/deposits/show.html.haml
+++ b/app/views/deposits/show.html.haml
@@ -14,7 +14,7 @@
 %h2=Deposit.human_attribute_name("payments")
 =list :payments
 
-%table.kame
+%table.list
   %tr.total
     %th=tc(:payments_count, :mode=>@deposit.mode.name)
     %td=@deposit.payments_count 
