--- a/app/views/mandates/configure.html.haml
+++ b/app/views/mandates/configure.html.haml
@@ -1,6 +1,6 @@
 =form_tag(:action=>:configure) do 
   =auto_complete_stylesheet
-  %table.kame
+  %table.list
     %tr
       %th=tc(:column)
       %th{:colspan=>2}=tc :filter
