--- a/app/views/production_chain_work_centers/_inputs.html.haml
+++ b/app/views/production_chain_work_centers/_inputs.html.haml
@@ -1,6 +1,6 @@
 -work_center = production_chain_work_center_inputs
 -if work_center
-  %table.kame.formalize
+  %table.list.formalize
     %thead
       %tr
         %th=OperationLine.human_attribute_name("product")
