--- a/app/views/journal_entries/_form.html.haml
+++ b/app/views/journal_entries/_form.html.haml
@@ -1,14 +1,14 @@
 =toolbar do |t|
-  -t.link :new, :remote=>true, :url=>{:controller=>:journal_entry_lines}, :update=>:lines, :position=>:bottom
+  -t.link :new, :remote=>true, :url=>{:controller=>:journal_entry_lines}, :update=>:lines, :position=>:bottom, :method=>:get
 =formalize do |f|
   -f.error :journal_entry
-  -f.field JournalEntry.human_attribute_name("journal"), link_to(@journal_entry.journal.name, :action=>:journal, :id=>@journal.id)
+  -f.field JournalEntry.human_attribute_name("journal"), link_to(@journal_entry.journal.name, :action=>:show, :controller=>:journals, :id=>@journal.id)
   -f.field :journal_entry, :number
   -f.field :journal_entry, :printed_on
   -# f.field :journal_entry, :draft_mode
   -# f.field :journal_entry, :created_on
 =hidden_field_tag "journal_id", params[:journal_id]
-%table.kame{:style=>"margin-bottom: 8px;"}
+%table.list{:style=>"margin-bottom: 8px;"}
   %thead
     %tr
       %th=JournalEntryLine.human_attribute_name("name")
