--- a/app/views/journals/balance.html.haml
+++ b/app/views/journals/balance.html.haml
@@ -23,7 +23,7 @@
             %label{:for=>name}=level
           
 -if @balance
-  %table.kame
+  %table.list
     %tr
       %th{:rowspan=>2}=tc(:account_number)
       %th{:rowspan=>2}=tc(:account_name)
