--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     =calendar_link_tag
     =javascript_include_tag :defaults
     =javascript_include_tag "dyke"
-    =javascript_include_tag "kame"
+    =javascript_include_tag "list"
   %body
     -expiration = {}
     -expiration = {"timeout"=>session[:expiration], "timeout-href"=>renew_session_url(:name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
