--- a/app/views/sale_lines/_row_form.html.haml
+++ b/app/views/sale_lines/_row_form.html.haml
@@ -1,6 +1,7 @@
 %fieldset.quick-add
   %legend=tc :add_quickly_a_line
   =form_tag(:controller=>:sale_lines, :action=>:create) do 
+    =hidden_field_tag(:sale_id, @sale.id)
     %table.quick
       %tr
         %td=SaleLine.human_attribute_name("product")
@@ -9,4 +10,4 @@
       %tr
         %td=dyli_tag("sale_line[price_id]", :available_prices, :controller=>:interfacers)
 
-=observe_field("sale_line_price_id", :update=>"detail-row", :url=>detail_sale_lines_url(:sale_id=>@sale.id, :mode=>:row), :frequency => 0.25, :with=>"id", :loading=>"onLoading()", :loaded=>"onLoaded()")
+=observe_field("sale_line_price_id", :update=>"detail-row", :method=>:get, :url=>{:controller=>:sale_lines, :action=>:detail, :sale_id=>@sale.id, :mode=>:row}, :frequency => 0.25, :with=>"price_id", :loading=>"onLoading()", :loaded=>"onLoaded()")
