--- a/app/views/bank_statements/point.html.haml
+++ b/app/views/bank_statements/point.html.haml
@@ -23,8 +23,8 @@
           -if @journal_entry_line.bank_statement_id.nil? or checked
             =check_box_tag("journal_entry_line[#{@journal_entry_line.id}][checked]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t1();", :id=>"journal_entry_line_#{@journal_entry_line.id}_checked" ) 
           -else
-            =link_to(@journal_entry_line.bank_statement.number, :action=>:bank_statement, :id=>@journal_entry_line.bank_statement.id)
-        %td=link_to(@journal_entry_line.entry.number, :action=>:journal_entry, :id=>@journal_entry_line.entry_id)
+            =link_to(@journal_entry_line.bank_statement.number, :action=>:show, :id=>@journal_entry_line.bank_statement.id)
+        %td=link_to(@journal_entry_line.entry.number, :action=>:show, :controller=>:journal_entries, :id=>@journal_entry_line.entry_id)
         %td.date=I18n.localize(@journal_entry_line.entry.printed_on)
         %td.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_checked')"}=@journal_entry_line.name
         %td.dec.debit.clickable{:onclick=>"toggleCheckBox('journal_entry_line_#{@journal_entry_line.id}_checked')"}=number_to_accountancy(@journal_entry_line.debit)
