--- a/app/views/financial_years/index.html.haml
+++ b/app/views/financial_years/index.html.haml
@@ -1,4 +1,5 @@
--# Eclated automatically (2011-06-08)
 =toolbar do |t|
   -t.link(:new) # if @current_company.current_financial_year.nil?
+  -if year = @current_company.closable_financial_year
+    -t.close year
 =list
