--- a/app/views/journals/_options.html.haml
+++ b/app/views/journals/_options.html.haml
@@ -2,11 +2,11 @@
 -if [:balance_sheet, :income_statement].include?(nature)
   =formalize do |f|
     -f.title FinancialYear.model_name.human 
-    -f.field FinancialYear.model_name.human, select_tag("financial_year", options_for_select(@current_company.financial_years.collect{|x| [x.code, x.id.to_s]}, params[:financial_year]))
+    -f.field FinancialYear.model_name.human, select_tag("financial_year_id", options_for_select(@current_company.financial_years.collect{|x| [x.code, x.id.to_s]}, params[:financial_year_id]))
 -elsif nature == :journal
   =formalize do |f|
     -f.title Journal.model_name.human
-    -f.field Journal.model_name.human, select_tag("journal", options_for_select(@current_company.journals.collect{|x| [x.name, x.id.to_s]}, params[:journal]))
+    -f.field Journal.model_name.human, select_tag("journal_id", options_for_select(@current_company.journals.collect{|x| [x.name, x.id.to_s]}, params[:journal_id]))
 -if [:journal, :general_journal, :general_ledger].include?(nature)
   =formalize do |f|
     -f.title :period
