--- a/app/views/journals/balance.html.haml
+++ b/app/views/journals/balance.html.haml
@@ -39,8 +39,8 @@
       -if line[1].to_i > 0
         -account = @current_company.accounts.find(line[1])
         %tr{:class=>cycle(:odd, :even)}
-          %td.code=link_to(account.number, :action=>:account, :id=>account.id)
-          %td=link_to(account.name, :action=>:account, :id=>account.id)
+          %td.code=link_to(account.number, :action=>:show, :controller=>:accounts, :id=>account.id)
+          %td=link_to(account.name, :action=>:show, :controller=>:accounts, :id=>account.id)
           %td.dec=number_to_accountancy(line[2])
           %td.dec=number_to_accountancy(line[3])
           %td.dec=number_to_accountancy(line[4]) if line[4].to_f > 0
