--- a/app/views/layouts/_side.html.haml
+++ b/app/views/layouts/_side.html.haml
@@ -1,10 +1,11 @@
 -if menu = menus[path[0]] and path[1] != :__hidden__
-  -prefix = "#{path[0]}_#{path[1]}"
-  -preference = @current_user.preference("interface.side.#{prefix}.opened", true, :boolean)
-  .module.menu
-    %ul{:id=>"side_#{prefix}_actions", :style=>(preference.value ? nil : "display: none") }
-      -for url in menu[path[1]]||[]
-        =li_link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url, :class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}"))
+  -items = menu[path[1]]||[]
+  -if items.size > 1
+    -prefix = "#{path[0]}_#{path[1]}"
+    .module.menu
+      %ul{:id=>"side_#{prefix}_actions"}
+        -for url in items
+          %li=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url, :class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}"))
 
 
 -if session[:history].is_a?(Array) and not session[:history].size.zero?
