--- a/app/views/layouts/_top.html.haml
+++ b/app/views/layouts/_top.html.haml
@@ -19,12 +19,25 @@
             =link_to(name, last_page(menu), :class=>"menu #{menu}")
             %ul
               -for submenu, items in submenus
-                %li=link_to(tl("menus.submenus.#{submenu}"), items[0])
+                %li
+                  =link_to(tl("menus.submenus.#{submenu}"), items[0])
+                  -#if items.size>1
+                    %ul
+                      -for url in items
+                        %li=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url)
+
           -else
             =link_to(name, dashboard_url(:action=>menu), :class=>"menu #{menu} current")
-          -#=link_to_if(rm[0] != menu, tl("menus.#{menu}"), last_page(menu), :class=>menu) do |name|
-            -link_to(name, dashboard_url(:action=>menu), :class=>"#{menu} current")
   .submenu-bar
-    -for submenu, items in menus[rm[0]]||[]
-      =link_to_if(rm[1] != submenu, tl("menus.submenus.#{submenu}"), items[0]) do |name| # , :default=>["actions.#{submenu}.index".to_sym, "labels.menu.#{submenu}".to_sym]
-        -link_to(name, items[0], :class=>:current)
+    %ul
+      -for submenu, items in menus[rm[0]]||[]
+        %li
+          -if rm[1] != submenu
+            =link_to(tl("menus.submenus.#{submenu}"), items[0], :class=>"#{'multi' if items.size>1}")
+            -if items.size>1
+              %ul
+                -for url in items
+                  %li=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url)
+          -else     
+            =link_to(tl("menus.submenus.#{submenu}"), items[0], :class=>:current)
+  .clearfix
