Begins to review tests. Removes old-style and bad links.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1824 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/deposits/unvalidateds.html.haml
+++ b/app/views/deposits/unvalidateds.html.haml
@@ -3,7 +3,7 @@
     =list :unvalidateds
     .actions
       =link_to tg(:previous), :action=>:index
-      =submit_tag(tc('validate'), :action=>:unvalidated_deposits)
+      =submit_tag(tc('validate'))
 - else
   %p{:style=>'text-align:center'}= tc('no_deposits')
 
