--- a/app/views/production_chains/_conveyor.html.haml
+++ b/app/views/production_chains/_conveyor.html.haml
@@ -8,11 +8,11 @@
     %tr
       %td.cell{:class=>("check-state" if conveyor.check_state)}
         .bmenu
-          =link_to(conveyor.product.name, :action=>:production_chain_conveyor_update, :id=>conveyor.id)
+          =link_to(conveyor.product.name, :controller=>:production_chain_conveyors, :action=>:edit, :id=>conveyor.id)
           %ul 
             %li=tl(:x_unit_per_second, :quantity=>conveyor.flow, :unit=>conveyor.unit.readable_name)
-            =li_link_to(tl(:update), {:action=>:production_chain_conveyor_update, :id=>conveyor.id}, :class=>"icon im-update")
-            =li_link_to(tl(:delete), {:action=>:production_chain_conveyor_delete, :id=>conveyor.id}, :confirm=>tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-delete")
+            =li_link_to(tl(:edit), {:controller=>:production_chain_conveyors, :action=>:edit, :id=>conveyor.id}, :class=>"icon im-edit")
+            =li_link_to(tl(:destroy), {:controller=>:production_chain_conveyors, :action=>:destroy, :id=>conveyor.id}, :confirm=>tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-destroy")
 %td.conveyor-output
 -unless conveyor.target_quantity.zero?
   %td
