--- a/app/views/land_parcels/show.html.haml
+++ b/app/views/land_parcels/show.html.haml
@@ -12,9 +12,9 @@
 
 %table.stepper
   %tr
-    %td.step=@land_parcel.parent_kinships.collect{|k| link_to(k.parent_land_parcel.name, :action=>:land_parcel, :id=>k.parent_land_parcel_id).html_safe}.to_sentence.html_safe
+    %td.step=@land_parcel.parent_kinships.collect{|k| link_to(k.parent_land_parcel.name, :action=>:show, :id=>k.parent_land_parcel_id).html_safe}.to_sentence.html_safe
     %td.step.active=@land_parcel.name
-    %td.step=@land_parcel.child_kinships.collect{|k| link_to(k.child_land_parcel.name, :action=>:land_parcel, :id=>k.child_land_parcel_id).html_safe}.to_sentence.html_safe
+    %td.step=@land_parcel.child_kinships.collect{|k| link_to(k.child_land_parcel.name, :action=>:show, :id=>k.child_land_parcel_id).html_safe}.to_sentence.html_safe
 
 %h2=tc :operations
 =toolbar do |t|
