Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1825 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/dashboards/_general.html.haml
+++ b/app/views/dashboards/_general.html.haml
@@ -15,5 +15,5 @@
           -for menuitem in menuitems
             =li_link_to(t("actions.#{menuitem[:controller]}.#{menuitem[:action]}"), menuitem)
 -# Test bug HAML
-  -Use haml 3.0.25 if it don't work  
+  -Use haml (>= 3.0.25) if it don't work  
   
