--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -9,4 +9,4 @@
   -f.field :event, :reason, :field=>:textarea
   -f.field :event, :started_at
 
-=observe_field(event_nature_id, :url=>{:action=>:change_minutes}, :frequency=>0.25, :with=>"id")
+=observe_field(event_nature_id, :url=>{:action=>:change_minutes}, :frequency=>0.25, :with=>"nature_id", :method=>:get)
