--- a/app/views/operation_uses/_row_form.html.haml
+++ b/app/views/operation_uses/_row_form.html.haml
@@ -1,4 +1,4 @@
--use = operation_use_row_form||{}
+-use = row_form||{}
 -id='u'+Time.now.to_i.to_s(36)+rand.to_s[2..-1].to_i.to_s(36)
 -if use.respond_to? :errors
   -if use.errors.size > 0
