Fixes the bug on cache key of help files
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1828 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -4,7 +4,8 @@
   -update, complete, resize = "#{params[:dialog]}-help", "$('#{params[:dialog]}').resize()", params[:dialog]
 -base_url = {:controller=>:help}
 -base_url[:dialog] = params[:dialog] if params[:dialog]
--cache(:controller=>:help, :action=>:show, :locale=>::I18n.locale, :id=>article) do
+-#cache(:controller=>:help, :action=>:show, :locale=>::I18n.locale, :id=>article.split(/[^a-z0-9\-]/)[-2]) do
+-cache(article) do
   .content.flex{:style=>'overflow:auto;'}
     -if article.is_a? String
       =article(article, :update=>update, :complete=>complete, :url=>base_url.merge(:action=>:show))
